--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-polizas-y-garantias/components/editar-observada-o-devuelta/editar-observada-o-devuelta.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-polizas-y-garantias/components/editar-observada-o-devuelta/editar-observada-o-devuelta.component.html
@@ -8,7 +8,7 @@
   <p class="info-sub-title">
     <span> Fecha de firma del contrato <b>{{ contrato.fechaFirmaContrato | date: 'dd/MM/yyyy' }}</b> </span>
     <span> <b>Contratación</b> </span>
-    <span> Estado: <b>Sin radicación de pólizas</b> </span>
+    <span> Estado: <b>Con póliza observada y devuelta</b> </span>
   </p>
 </section>
 <section class="container" *ngIf="contrato !== undefined">
@@ -561,7 +561,7 @@
                           class="label-left"
                           for="numeroContrato"
                           [class.color-secondaryColor]="(addressForm.get('fechaRevision').invalid && addressForm.get('fechaRevision').touched) || (addressForm.get('fechaRevision').invalid && estaEditando)">
-                          Fecha de la revisión
+                          Fecha de la revisión {{ contadorRevision + 1 }}
                   </label>
                 </div>
                 <div class="col d-flex align-items-center">
@@ -605,7 +605,7 @@
                           class="label-left"
                           for="numeroContrato"
                           [class.color-secondaryColor]="(addressForm.get('estadoRevision').invalid && addressForm.get('estadoRevision').touched) || (addressForm.get('estadoRevision').invalid && estaEditando)">
-                          Estado de la revisión
+                          Estado de la revisión {{ contadorRevision + 1 }}
                   </label>
                 </div>
                 <div class="col">
@@ -731,14 +731,17 @@
       </div>
     </div>
 
-    <!--
-    <div *ngIf="contrato.polizaObservacion.length > 0">
-      <app-tabla-historial-observaciones-poliza [polizaObservacion]="contrato.polizaObservacion"></app-tabla-historial-observaciones-poliza>
+    <div *ngIf="polizaObservacion.length > 0">
+      <app-tabla-historial-observaciones-poliza [polizaObservacion]="polizaObservacion"></app-tabla-historial-observaciones-poliza>
     </div>
-    -->
+
     <div class="text-center mb-2em">
-      <button mat-button color="warn" class="btn-guardar" type="submit">
-        <img src="assets/img/icon/guardar.svg" alt="Regresar" />
+      <button mat-button
+              color="warn"
+              class="btn-guardar"
+              [disabled]="addressForm.dirty === false"
+              type="submit">
+        <img src="assets/img/icon/guardar.svg" alt="Regresar">
       </button>
     </div>
   </form>
