--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-polizas-y-garantias/components/tabla-en-revision-de-polizas/tabla-en-revision-de-polizas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-polizas-y-garantias/components/tabla-en-revision-de-polizas/tabla-en-revision-de-polizas.component.html
@@ -35,7 +35,7 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
             <td mat-cell *matCellDef="let element">
                 <button mat-raised-button color="accent" class="btn-table"  *ngIf="element.registroCompletoPolizaNombre=='Completo'"
-                (click)="this.aprobarPoliza(element.contratoId)">
+                (click)="aprobarPoliza( element.contratoId )">
                     Aprobar
                 </button>
                 <a [routerLink]="['enRevision', element.contratoId]" mat-raised-button color="accent"
