--- a/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/observacion-dialog/observacion-dialog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/observacion-dialog/observacion-dialog.component.html
@@ -1,3 +1,7 @@
+<button mat-button mat-dialog-close class="modal--btn-cerrar">
+  <img src="assets/img/icon/cerrar-blanco.svg" alt="cerrar" />
+</button>
+
 <div class="text-center">
   <button mat-button mat-dialog-close class="modal--btn-cerrar" [mat-dialog-close]="true">
     <img src="assets/img/icon/cerrar-blanco.svg" alt="cerrar">
