--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/observacion/observacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/observacion/observacion.component.html
@@ -1,3 +1,7 @@
+<button mat-button mat-dialog-close class="modal--btn-cerrar">
+  <img src="assets/img/icon/cerrar-blanco.svg" alt="cerrar" />
+</button>
+
 <section class="scroll">
   <div class="text-center">
     <h1 class="title-menu--h1">
