--- a/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/crear-acta/crear-acta.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/crear-acta/crear-acta.component.html
@@ -1,181 +1,172 @@
 <section class="container">
-    <div class="text-right">
-        <a routerLink="/comiteFiduciario" mat-button color="primary" class="btn-regresar">
-            <img src="assets/img/icon/regresar.svg" alt="Regresar">
-        </a>
-    </div>
-    <div class="text-center">
-        <h1 class="title-menu--h1">
-            Crear acta {{ objetoComiteTecnico.numeroComite }}
-        </h1>
-    </div>
-    <p><b class="sub-text flex-date">{{ objetoComiteTecnico.fechaOrdenDia | date: 'dd/MM/yyyy' }}</b></p>
+  <div class="text-right">
+    <a routerLink="/comiteFiduciario" mat-button color="primary" class="btn-regresar">
+      <img src="assets/img/icon/regresar.svg" alt="Regresar" />
+    </a>
+  </div>
+  <div class="text-center">
+    <h1 class="title-menu--h1">Crear acta {{ objetoComiteTecnico.numeroComite }}</h1>
+  </div>
+  <p>
+    <b class="sub-text flex-date">{{ objetoComiteTecnico.fechaOrdenDia | date: 'dd/MM/yyyy' }}</b>
+  </p>
+  <mat-card class="shipping-card">
+    <mat-card-header class="header-card header-card--margin">
+      <mat-card-title class="header-card--text"> Miembros participantes </mat-card-title>
+    </mat-card-header>
+    <mat-card-content class="colorMainColor">
+      {{ nombresParticipantes }}
+    </mat-card-content>
+  </mat-card>
+  <div class="text-center">
+    <p class="info-container">
+      <span class="info-text sin-diligenciar">Sin diligenciar</span>
+      <span class="info-text en-proceso">En proceso</span>
+      <span class="info-text completo">Completo</span>
+    </p>
+  </div>
+
+  <mat-accordion>
+    <mat-expansion-panel class="expansion-style">
+      <mat-expansion-panel-header class="expansion-style--header">
+        <mat-panel-title
+          class="expansion-style--title"
+          [class.sin-diligenciar]="solicitudesCompletas === null"
+          [class.en-proceso]="solicitudesCompletas === false"
+          [class.completo]="solicitudesCompletas === true"
+        >
+          Validación de solicitudes contractuales
+        </mat-panel-title>
+      </mat-expansion-panel-header>
+
+      <mat-accordion>
+        <mat-expansion-panel
+          class="expansion-style sub-expansion"
+          *ngFor="let sesionComiteSolicitud of objetoComiteTecnico.sesionComiteSolicitudComiteTecnicoFiduciario"
+        >
+          <mat-expansion-panel-header class="expansion-style--header">
+            <mat-panel-title
+              class="expansion-style--title"
+              [class.sin-diligenciar]="sesionComiteSolicitud.registroCompletoActa === undefined"
+              [class.en-proceso]="sesionComiteSolicitud.registroCompletoActa === false"
+              [class.completo]="sesionComiteSolicitud.registroCompletoActa === true"
+            >
+              Solicitud {{ sesionComiteSolicitud.numeroSolicitud }}
+            </mat-panel-title>
+          </mat-expansion-panel-header>
+
+          <button
+            (click)="Solicitud.cargarRegistro()"
+            style="display: none"
+            id="btnSolicitud"
+            name="btnSolicitud"
+          ></button>
+
+          <app-form-solicitud
+            #Solicitud
+            [sesionComiteSolicitud]="sesionComiteSolicitud"
+            [listaMiembros]="objetoComiteTecnico.sesionParticipante"
+            [fechaMaxima]="objetoComiteTecnico.fechaOrdenDia"
+            (validar)="habilitar($event)"
+            [style.pointer-events]="getStyle()"
+            [fechaComite]="objetoComiteTecnico.fechaOrdenDia"
+            [EstadosolicitudActa]="objetoComiteTecnico.estadoActaCodigo"
+          >
+          </app-form-solicitud>
+        </mat-expansion-panel>
+      </mat-accordion>
+    </mat-expansion-panel>
+    <mat-expansion-panel class="expansion-style">
+      <mat-expansion-panel-header class="expansion-style--header">
+        <mat-panel-title
+          class="expansion-style--title"
+          [class.sin-diligenciar]="temasCompletos === null"
+          [class.en-proceso]="temasCompletos === false"
+          [class.completo]="temasCompletos === true"
+        >
+          Otros temas
+        </mat-panel-title>
+      </mat-expansion-panel-header>
+      <mat-accordion *ngFor="let tema of listaTemas; let i = index">
+        <mat-expansion-panel class="expansion-style sub-expansion">
+          <mat-expansion-panel-header class="expansion-style--header">
+            <mat-panel-title
+              class="expansion-style--title"
+              [class.sin-diligenciar]="tema.registroCompletoActa === undefined"
+              [class.en-proceso]="tema.registroCompletoActa === false"
+              [class.completo]="tema.registroCompletoActa === true"
+            >
+              Tema {{ i + 1 }}
+            </mat-panel-title>
+          </mat-expansion-panel-header>
+
+          <button (click)="otros.cargarRegistro()" style="display: none" id="btnOtros" name="btnOtros"></button>
+
+          <app-form-otros-temas
+            #otros
+            [sesionComiteTema]="tema"
+            [listaMiembros]="objetoComiteTecnico.sesionParticipante"
+            (validar)="habilitar($event)"
+            [style.pointer-events]="getStyle()"
+            [fechaComite]="objetoComiteTecnico.fechaOrdenDia"
+          >
+          </app-form-otros-temas>
+        </mat-expansion-panel>
+      </mat-accordion>
+    </mat-expansion-panel>
+    <mat-expansion-panel class="expansion-style">
+      <mat-expansion-panel-header class="expansion-style--header">
+        <mat-panel-title
+          class="expansion-style--title"
+          [class.sin-diligenciar]="proposicionesCompletos === null"
+          [class.en-proceso]="proposicionesCompletos === false"
+          [class.completo]="proposicionesCompletos === true"
+        >
+          Proposiciones y varios
+        </mat-panel-title>
+      </mat-expansion-panel-header>
+
+      <mat-accordion *ngFor="let tema of listaProposiciones; let i = index">
+        <mat-expansion-panel class="expansion-style sub-expansion">
+          <mat-expansion-panel-header class="expansion-style--header">
+            <mat-panel-title
+              class="expansion-style--title"
+              [class.sin-diligenciar]="tema.registroCompletoActa === undefined"
+              [class.en-proceso]="tema.registroCompletoActa === false"
+              [class.completo]="tema.registroCompletoActa === true"
+            >
+              Tema {{ i + 1 }}
+            </mat-panel-title>
+          </mat-expansion-panel-header>
+
+          <button
+            (click)="proposiciones.cargarRegistro()"
+            style="display: none"
+            id="btnProposiciones"
+            name="btnProposiciones"
+          ></button>
+
+          <app-form-otros-temas
+            #proposiciones
+            [sesionComiteTema]="tema"
+            [listaMiembros]="objetoComiteTecnico.sesionParticipante"
+            (validar)="habilitar($event)"
+            [style.pointer-events]="getStyle()"
+            [fechaComite]="objetoComiteTecnico.fechaOrdenDia"
+          >
+          </app-form-otros-temas>
+        </mat-expansion-panel>
+      </mat-accordion>
+    </mat-expansion-panel>
+  </mat-accordion>
+  <div *ngIf="objetoComiteTecnico.estadoActaCodigo == '4'">
     <mat-card class="shipping-card">
-        <mat-card-header class="header-card  header-card--margin">
-            <mat-card-title class="header-card--text">
-                Miembros participantes
-            </mat-card-title>
-        </mat-card-header>
-        <mat-card-content class="colorMainColor">
-            {{ nombresParticipantes }}
-        </mat-card-content>
+      <mat-card-header class="header-card header-card--margin">
+        <mat-card-title class="header-card--text"> Comentarios al acta </mat-card-title>
+      </mat-card-header>
+      <mat-card-content class="colorMainColor">
+        <app-tabla-comentarios-acta [data]="listaComentarios"></app-tabla-comentarios-acta>
+      </mat-card-content>
     </mat-card>
-    <div class="text-center">
-        <p class="info-container">
-            <span class="info-text sin-diligenciar">Sin diligenciar</span>
-            <span class="info-text en-proceso">En proceso</span>
-            <span class="info-text completo">Completo</span>
-        </p>
-    </div>
-
-    <mat-accordion>
-        <mat-expansion-panel class="expansion-style">
-            <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title"
-                        [class.sin-diligenciar]="solicitudesCompletas === null"
-                        [class.en-proceso]="solicitudesCompletas === false"
-                        [class.completo]="solicitudesCompletas === true">
-                    Validación de solicitudes contractuales
-                </mat-panel-title>
-            </mat-expansion-panel-header>
-
-            <mat-accordion>
-                <mat-expansion-panel
-                    class="expansion-style sub-expansion"
-                    *ngFor="let sesionComiteSolicitud of objetoComiteTecnico.sesionComiteSolicitudComiteTecnicoFiduciario"
-                >
-                    <mat-expansion-panel-header class="expansion-style--header">
-                        <mat-panel-title class="expansion-style--title "
-
-                        [class.sin-diligenciar]="sesionComiteSolicitud.registroCompletoActa === undefined"
-                        [class.en-proceso]="sesionComiteSolicitud.registroCompletoActa === false"
-                        [class.completo]="sesionComiteSolicitud.registroCompletoActa === true"
-                        >
-                            Solicitud {{ sesionComiteSolicitud.numeroSolicitud }}
-                        </mat-panel-title>
-                    </mat-expansion-panel-header>
-
-                    <button
-                        (click)="Solicitud.cargarRegistro()"
-                        style="display: none;"
-                        id="btnSolicitud"
-                        name="btnSolicitud"
-                    >
-                    </button>
-
-                    <app-form-solicitud
-                        #Solicitud
-                        [sesionComiteSolicitud]="sesionComiteSolicitud"
-                        [listaMiembros]="objetoComiteTecnico.sesionParticipante"
-                        [fechaMaxima]="objetoComiteTecnico.fechaOrdenDia"
-                        (validar)="habilitar($event)"
-                        [style.pointer-events]="getStyle()"
-                        [fechaComite]="objetoComiteTecnico.fechaOrdenDia"
-                        [EstadosolicitudActa]="objetoComiteTecnico.estadoActaCodigo"
-                    >
-
-                    </app-form-solicitud>
-                </mat-expansion-panel>
-            </mat-accordion>
-
-        </mat-expansion-panel>
-        <mat-expansion-panel class="expansion-style">
-            <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title"
-                    [class.sin-diligenciar]="temasCompletos === null"
-                    [class.en-proceso]="temasCompletos === false"
-                    [class.completo]="temasCompletos === true">
-                    Otros temas
-                </mat-panel-title>
-            </mat-expansion-panel-header>
-            <mat-accordion *ngFor="let tema of listaTemas; let i = index">
-                <mat-expansion-panel class="expansion-style sub-expansion">
-                    <mat-expansion-panel-header class="expansion-style--header">
-                        <mat-panel-title class="expansion-style--title"
-                            [class.sin-diligenciar]="tema.registroCompletoActa === undefined"
-                            [class.en-proceso]="tema.registroCompletoActa === false" 
-                            [class.completo]="tema.registroCompletoActa === true"
-                        >
-                            Tema {{ i + 1 }}
-                        </mat-panel-title>
-                    </mat-expansion-panel-header>
-
-                    <button
-                        (click)="otros.cargarRegistro()"
-                        style="display: none;"
-                        id="btnOtros"
-                        name="btnOtros"
-
-                    >
-                    </button>
-
-                    <app-form-otros-temas
-                        #otros
-                        [sesionComiteTema]="tema"
-                        [listaMiembros]="objetoComiteTecnico.sesionParticipante"
-                        (validar)="habilitar($event)"
-                        [style.pointer-events]="getStyle()"
-                        [fechaComite]="objetoComiteTecnico.fechaOrdenDia"
-                    >
-                </app-form-otros-temas>
-                </mat-expansion-panel>
-            </mat-accordion>
-
-        </mat-expansion-panel>
-        <mat-expansion-panel class="expansion-style">
-            <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title"
-                    [class.sin-diligenciar]="proposicionesCompletos === null"
-                    [class.en-proceso]="proposicionesCompletos === false"
-                    [class.completo]="proposicionesCompletos === true">
-                    Proposiciones y varios
-                </mat-panel-title>
-            </mat-expansion-panel-header>
-
-            <mat-accordion *ngFor="let tema of listaProposiciones; let i = index">
-                <mat-expansion-panel class="expansion-style sub-expansion">
-                    <mat-expansion-panel-header class="expansion-style--header">
-                        <mat-panel-title class="expansion-style--title"
-                            [class.sin-diligenciar]="tema.registroCompletoActa === undefined "
-                            [class.en-proceso]="tema.registroCompletoActa === false" 
-                            [class.completo]="tema.registroCompletoActa === true">
-                        >
-                            Tema {{ i + 1 }}
-                        </mat-panel-title>
-                    </mat-expansion-panel-header>
-
-                    <button
-                        (click)="proposiciones.cargarRegistro()"
-                        style="display: none;"
-                        id="btnProposiciones"
-                        name="btnProposiciones"
-                    >
-                    </button>
-
-                    <app-form-otros-temas
-                        #proposiciones
-                        [sesionComiteTema]="tema"
-                        [listaMiembros]="objetoComiteTecnico.sesionParticipante"
-                        (validar)="habilitar($event)"
-                        [style.pointer-events]="getStyle()"
-                        [fechaComite]="objetoComiteTecnico.fechaOrdenDia"
-                    >
-                     </app-form-otros-temas>
-                </mat-expansion-panel>
-            </mat-accordion>
-
-        </mat-expansion-panel>
-    </mat-accordion>
-    <div *ngIf="objetoComiteTecnico.estadoActaCodigo == '4'">
-      <mat-card class="shipping-card">
-          <mat-card-header class="header-card header-card--margin">
-              <mat-card-title class="header-card--text">
-                  Comentarios al acta
-              </mat-card-title>
-          </mat-card-header>
-          <mat-card-content class="colorMainColor">
-              <app-tabla-comentarios-acta [data]="listaComentarios"></app-tabla-comentarios-acta>
-          </mat-card-content>
-      </mat-card>
   </div>
 </section>
