--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/observacion/observacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/observacion/observacion.component.html
@@ -47,7 +47,7 @@
         (onContentChanged)="maxLength($event, 3000)" [(ngModel)]="observacion"></quill-editor>
     </div>
     <span class="contador miles" *ngIf="observacion">
-      {{3000 - textoLimpio(observacion)}}
+      {{ 3000 - (textoLimpio(observacion) > 3000 ? 3000 : textoLimpio(observacion)) }}
     </span>
     <span class="contador miles" *ngIf="!observacion">
       3000
