--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/dialog-devolucion/dialog-devolucion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/dialog-devolucion/dialog-devolucion.component.html
@@ -10,15 +10,12 @@
       <mat-card-title class="header-card--text"> Motivo de la devolución </mat-card-title>
     </mat-card-header> -->
     <mat-card-content>
-      <p class="text-justify">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In id erat semper, hendrerit lectus in, bibendum nisl.
-        In elementum lorem id ipsum ultrices pulvinar. Aliquam semper erat dictum quam mollis egestas. Phasellus vel
-        rutrum eros, ornare laoreet sem. Sed tincidunt nulla purus, vitae posuere purus faucibus et. Suspendisse viverra
-        felis eget pharetra ornare. Aliquam erat volutpat. Suspendisse sit amet augue ultricies, semper eros id,
-        ultrices augue. Morbi sem sapien, cursus at posuere ut, euismod non lorem. Integer hendrerit ornare rutrum.
-        Proin bibendum dui vitae nulla dignissim, scelerisque luctus felis aliquam. In quis nisi libero. Curabitur
-        auctor, erat id euismod ultricies, magna lectus gravida felis, vel consequat risus ante et enim.
-      </p>
+      <section
+        
+        [innerHTML]="data.observacionDevolucionRechazo"
+        class="text-justify"
+      ></section>
+      
     </mat-card-content>
   </mat-card>
 </div>
