--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-polizas-y-garantias/components/tabla-en-revision-de-polizas/tabla-en-revision-de-polizas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-polizas-y-garantias/components/tabla-en-revision-de-polizas/tabla-en-revision-de-polizas.component.html
@@ -27,19 +27,27 @@
 
         <ng-container matColumnDef="estadoPoliza">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado del registro </th>
-            <td mat-cell *matCellDef="let element"> <span class="info-text info-text__table"  [ngClass]="{'sin-diligenciar' : element.registroCompletoPolizaNombre=='Incompleto', 'completo' : element.registroCompletoPolizaNombre=='Completo'}"></span>
-                {{element.registroCompletoPolizaNombre}} </td>
+            <td mat-cell *matCellDef="let element"> <span class="info-text info-text__table"  [ngClass]="{'sin-diligenciar' : element.registroCompletoPoliza !== true, 'completo' : element.registroCompletoPoliza === true}"></span>
+                {{element.registroCompletoPoliza === true ? 'Completo' : 'Incompleto'}}
+            </td>
         </ng-container>
 
         <ng-container matColumnDef="contratoId">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
             <td mat-cell *matCellDef="let element">
-                <button mat-raised-button color="accent" class="btn-table"  *ngIf="element.registroCompletoPolizaNombre=='Completo'"
-                (click)="aprobarPoliza( element.contratoId )">
-                    Aprobar
+                <button mat-raised-button
+                        color="accent"
+                        class="btn-table" 
+                        *ngIf="element.registroCompletoPoliza === true"
+                        (click)="aprobarPoliza( element.contratoPolizaId )">
+                        Aprobar
                 </button>
-                <a [routerLink]="['enRevision', element.contratoId]" mat-raised-button color="accent"
-                    class="btn-table">Ver detalle / editar </a>
+                <a  [routerLink]="[ 'enRevision', element.contratoId ]"
+                    mat-raised-button
+                    color="accent"
+                    class="btn-table">
+                    Ver detalle / editar
+                </a>
             </td>
         </ng-container>
 
