fix proyecto administrativo: 4.2.	Al dar clic en enviar se demora 1.8 minutos para mostrar la ventana de confirmación

--- a/asivamosffie.web/asivamosffie/src/app/_pages/crear-proyecto-admin/components/formulario-proyectos/formulario-proyectos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/crear-proyecto-admin/components/formulario-proyectos/formulario-proyectos.component.html
@@ -75,7 +75,7 @@
                       >
                         <mat-select required [(ngModel)]="fuente.fuenteFinanciacionId">
                           <mat-option *ngFor="let listado of listadoFuentes" [value]="listado.fuenteFinanciacionId">
-                            Número de acuerdo: <b>{{ listado.cofinanciacionDocumento?.numeroAcuerdo }}</b> Tipo:
+                            Número de acuerdo: <b>{{ listado.aportante?.cofinanciacionId }}</b> Tipo:
                             <b>{{ listado.fuenteRecursosString }}</b>
                           </mat-option>
                         </mat-select>
